# AI-Immigration-Compliance

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt  vercel.json
frontend/: applicant.html  attorney.html  case-workspace.html  landing.html  login.html
frontend/css/: landing.css
src/immigration_compliance/: __init__.py
src/immigration_compliance/api/: __init__.py  app.py
src/immigration_compliance/engine/: __init__.py  evaluator.py  rules.py
src/immigration_compliance/models/: __init__.py  auth.py  case.py  compliance.py  employee.py
src/immigration_compliance/services/: __init__.py  auth_service.py  compliance_service.py
tests/: test_api.py  test_auth.py  test_engine.py  test_models.py
