[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-immigration-compliance"
version = "0.1.0"
description = "AI-powered immigration compliance monitoring and risk assessment system"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "pydantic[email]>=2.10.0",
    "sqlalchemy>=2.0.36",
    "alembic>=1.14.0",
    "httpx>=0.28.0",
    "python-dateutil>=2.9.0",
    "jinja2>=3.1.5",
    "PyJWT>=2.10.0",
    "python-multipart>=0.0.18",
    "anthropic>=0.42.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.10"
strict = true
